# Kelsoncraft-Rust

./: .gitignore  LICENSE  Readme.md  Rust-Crates.md
Dev/: .env.example  Cargo.toml
Dev/src/: age_encryption.rs  base64_testing.rs  ip_testing.rs  main.rs  messages.rs  number_generator_test.rs  number_guesser.rs  password_hashing.rs  string_testing.rs  struct_test.rs  system_info.rs
Esp32-Test/: Cargo.toml
Esp32-Test/src/: main.rs
esp32_test/: Cargo.toml  Readme.md  build.rs
esp32_test/.cargo/: config.toml
esp32_test/src/: main.rs
