[package]
name = "Dev"
version = "0.1.0"
edition = "2024"

[dependencies]
const_format = "0.2.36"
dotenv = "0.15.0"
os_info = "3.15.0"
# More packages can be added here for Rust
#rand = "0.10.2"
rand = "0.8.6"

bcrypt = "0.19.2"

# https://github.com/str4d/rage
# https://crates.io/crates/age
age = { version = "0.12.0", features = ["armor"] }
