[package]
name = "kelsoncraft_rust_dev"
version = "0.1.0"
edition = "2024"
authors = ["kelson8 <kelson@kelsoncraft.net>"]
license = "MIT"
#keywords = ["dev", "kelsoncraft"]
categories = ["command-line-utilities", "encoding", "decoding", "encryption", "decryption"]
readme = "/Readme.md"

# TODO Make this into a page on my website and add info about my new Rust project.
#homepage = "https://kelsoncraft.net/projects/rust/kelsoncraft-rust"

[dependencies]
const_format = "0.2.36"
dotenv = "0.15.0"
os_info = "3.15.0"
# More packages can be added here for Rust
#rand = "0.10.2"
rand = "0.8.6"

bcrypt = "0.19.2"

# https://github.com/str4d/rage
# https://crates.io/crates/age
age = { version = "0.12.0", features = ["armor"] }

base64 = "0.22.1"
