[package]
name = "esp32_test"
version = "0.1.0"
authors = ["kelson8 <kelson@kelsoncraft.net>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32_test"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
anyhow = "1.0.103"

# https://esp32.implrust.com/oled/crates.html

# TODO Figure out why these break ESP32 support
#ssd1306 = { version = "0.10.0", features = ["async"] }
#embedded-graphics = "0.8.1"

#esp-hal = "1.1.1"
#tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
embuild = "0.33"
