[package]
edition      = "2024"
name         = "esp32_test"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32_test"
path = "./src/bin/main.rs"
# https://stackoverflow.com/questions/65722396/how-to-avoid-e0463-cant-find-crate-for-test-cant-find-crate-when-building
# Fixes the error with no_std, it'll still compile but the error was annoying.
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32"] }


esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

critical-section = "1.2.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
