[package]
edition      = "2024"
name         = "esp32_test"
rust-version = "1.88"
version      = "0.1.0"
default-run = "esp32_test"

[[bin]]
name = "esp32_test"
path = "./src/bin/main.rs"
# https://stackoverflow.com/questions/65722396/how-to-avoid-e0463-cant-find-crate-for-test-cant-find-crate-when-building
# Fixes the error with no_std, it'll still compile but the error was annoying.
test = false
doctest = false
bench = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }

defmt = "1.1.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32"] }

# New
# https://github.com/ImplFerris/esp32-projects/blob/main/hello-oled/Cargo.toml

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt"] }
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }

static_cell      = "2.1.1"
critical-section = "1.2.0"

ssd1306 = { version = "0.10.0", features = ["async"] }
embedded-graphics = "0.8.1"

# This could be used for later, matches my C++ font used for PlatformIO
# https://docs.rs/embedded-picofont/latest/embedded_picofont/
#embedded-picofont = "0.2.1"
#

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
